--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>5.13.4</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.2</version>
+        </dependency>
     </dependencies>
 
 </project>
